# goat-routing

./: .devcontainer.json  .env_template  .gitignore  Dockerfile  README.md  coverage.xml  docker-compose.yml  initdb.py  motis_entrypoint.sh  pyproject.toml
.github/workflows/: lint.yml  pr.yml  push.yml  release.yml  test.yml
src/: main.py  utils.py
src/core/: config.py  isochrone.py  jsoline.py  worker.py
src/core/street_network/: street_network_cache.py  street_network_util.py
src/crud/: crud_catchment_area.py  crud_catchment_area_sync.py  crud_heatmap.py  crud_isochrone.py  crud_isochrone_helper.py  crud_isochrone_sync.py
src/db/: db.py  session.py
src/db/functions/: fill_polygon_h3.sql  fill_polygon_h3_10.sql  fill_polygon_h3_3.sql  fill_polygon_h3_5.sql  fill_polygon_h3_6.sql  fill_polygon_h3_9.sql  fill_polygon_holes.sql  get_artificial_segments.sql  get_network_modifications.sql
src/endpoints/v2/: api.py  health.py  routing.py
src/preparation/: heatmap_matrix.py  heatmap_matrix_process.py
src/schemas/: ab_routing.py  catchment_area.py  error.py  heatmap.py  isochrone.py  status.py
tests/: conftest.py  coordinates.py  test_ab_routing.py  test_plausibility.py
